# tezda

./: .gitignore  main.py  pyproject.toml  requirements.txt
core/: login.py  register.py  verify.py
dep/botocore-1.32.6.dist-info/: RECORD
dep/jmespath-1.0.1.dist-info/: RECORD
dep/python_dotenv-1.0.0.dist-info/: RECORD
utils/: auth.py  database.py  response.py
